# nordic-uart-python

./: .gitignore  README.md  pyproject.toml
nordic_uart/: __init__.py  __main__.py  cli.py  const.py  scanners.py  uart.py
tests/: test_uart.py
